--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,7 @@
       content="Pernikahan Zuhdan & Ananda Sabtu, 12 Oktober 2024"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
-    <meta
-      property="og:image"
-      content="https://metatags.io/images/meta-tags.png"
-    />
+    <meta property="og:image" content="%PUBLIC_URL%/preview.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
