--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,7 @@
       rel="stylesheet"
     />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Pernikahan Zuhdan & Ananda Sabtu, 12 Oktober 2024"
-    />
+    <meta name="description" content="Sabtu, 12 Oktober 2024" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <meta property="og:image" content="/preview.png" />
     <!--
@@ -35,9 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>
-      Undangan Digital Pernikahan Zuhdan & Ananda Sabtu, 12 Oktober 2024
-    </title>
+    <title>The Wedding Of Ananda & Zuhdan - Bandung</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
